--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rolster/angular-forms",
-  "version": "17.0.0",
+  "version": "17.1.0",
   "description": "It implements a set of classes that allow managing the control of states of the input components in Angular",
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
@@ -26,7 +26,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@rolster/helpers-forms": "^1.10.8",
+    "@rolster/forms": "^2.0.1",
     "@rolster/validators": "^1.0.5",
     "rxjs": "^7.8.0",
     "uuid": "^9.0.1"
@@ -59,5 +59,8 @@
     "typescript",
     "angular",
     "forms"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
