--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rolster/angular-forms",
-  "version": "17.4.2",
+  "version": "17.5.0",
   "description": "It implements a set of classes that allow managing the control of states of the input components in Angular",
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
@@ -26,18 +26,16 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@rolster/forms": "^2.5.2",
+    "@angular/core": "^17.3.0",
+    "@rolster/forms": "^2.6.0",
     "@rolster/validators": "^1.0.5",
-    "rxjs": "^7.8.0",
     "uuid": "^9.0.1"
-  },
-  "peerDependencies": {
-    "@angular/core": "^17.3.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.3",
+    "@rolster/rollup": "^1.0.6",
     "@rolster/types": "^1.0.9",
     "@types/jest": "^29.5.1",
     "@types/uuid": "^9.0.7",
